--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       type="image/x-icon"
     />
   </head>
-  <body>
+  <body id="top">
     <!-- Navbar -->
     <nav class="navbar">
       <!-- Logo -->
@@ -631,25 +631,25 @@
         <div class="skills__box">
           <!-- Skills item 1 -->
           <div class="skills__item">
-            <div>90%</div>
+            <div><span>90%</span></div>
             <h3>HTML & CSS</h3>
           </div>
 
           <!-- Skills item 2 -->
           <div class="skills__item">
-            <div>96%</div>
+            <div><span>96%</span></div>
             <h3>AI & PS</h3>
           </div>
 
           <!-- Skills item 3 -->
           <div class="skills__item">
-            <div>85%</div>
+            <div><span>85%</span></div>
             <h3>JS & PHP</h3>
           </div>
 
           <!-- Skills item 4 -->
           <div class="skills__item">
-            <div>94%</div>
+            <div><span>94%</span></div>
             <h3>Photography</h3>
           </div>
         </div>
@@ -798,13 +798,31 @@
 
     <!-- Footer -->
     <footer class="footer">
-      Copyright &copy; <span id="date-with-js"></span> |
-      <a
-        style="text-decoration: underline"
-        href="https://facebook.com/llapashticaedonis"
-        >Edonis Llapashtica</a
-      >
+      <p>
+        Copyright &copy; <span id="date-with-js"></span> |
+        <a
+          style="text-decoration: underline"
+          href="https://facebook.com/llapashticaedonis"
+          >Edonis Llapashtica</a
+        >
+      </p>
+      <div>
+        <a href="https://facebook.com/llapashticaedonis" target="_blank"
+          ><i class="fa-brands fa-facebook-f"></i
+        ></a>
+        <a href="https://facebook.com/llapashticaedonis" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://facebook.com/llapashticaedonis" target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
     </footer>
+
+    <!-- Scroll up icon -->
+    <a href="#top" id="scroll-up" class="scroll-up">
+      <i class="fa-solid fa-angle-up"></i>
+    </a>
 
     <!-- Javascript -->
     <script src="js/main.js"></script>
