--- a/index.html
+++ b/index.html
@@ -824,6 +824,11 @@
       <i class="fa-solid fa-angle-up"></i>
     </a>
 
+    <!-- Tidio live chat -->
+    <script
+      src="//code.tidio.co/6gnuucjbkdg9cefe7nphuhkrcz4dyazo.js"
+      async
+    ></script>
     <!-- Javascript -->
     <script src="js/main.js"></script>
   </body>
