--- a/index.html
+++ b/index.html
@@ -567,22 +567,6 @@
             </div>
           </div>
 
-          <!-- <div id="quote1" class="quote">
-            <h3>John doe</h3>
-            <p>
-              Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
-              Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur
-              aliquet quam id dui posuere blandit. Nulla porttitor accumsan
-              tincidunt. Cras ultricies ligula sed magna dictum porta. Curabitur
-              non nulla sit amet nisl tempus convallis quis ac lectus. Praesent
-              sapien massa, convallis a pellentesque nec, egestas non nisi.
-              Mauris blandit aliquet elit, eget tincidunt ni dictum porta.
-            </p>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i id="quote__close" class="fa-solid fa-close quote__close"></i>
-          </div> -->
-
           <!-- Team item 2 -->
           <div class="team__item">
             <div class="team__header">
@@ -768,20 +752,27 @@
 
         <form>
           <div>
-            <input type="text" name="name" placeholder="Your Name" required />
-          </div>
+            <div>
+              <input type="text" name="name" placeholder="Your Name" required />
+            </div>
 
-          <div>
-            <input type="email" name="mail" placeholder="Your Mail" required />
-          </div>
+            <div>
+              <input
+                type="email"
+                name="mail"
+                placeholder="Your Mail"
+                required
+              />
+            </div>
 
-          <div>
-            <input
-              type="text"
-              name="subject"
-              placeholder="Your Subject"
-              required
-            />
+            <div>
+              <input
+                type="text"
+                name="subject"
+                placeholder="Your Subject"
+                required
+              />
+            </div>
           </div>
 
           <div>
