--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     />
   </head>
   <body id="top">
+    <!-- Loader -->
+    <div id="loader" class="loader">
+      <img src="images/logo/logo.svg" alt="Loader">
+    </div>
+
     <!-- Navbar -->
     <nav class="navbar">
       <!-- Logo -->
@@ -300,7 +305,7 @@
         <!-- Gallery item 4 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/499/501" alt="Gallery image 4" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 4" />
           </div>
 
           <div class="gallery__content">
@@ -312,7 +317,7 @@
         <!-- Gallery item 5 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/502/500" alt="Gallery image 5" />
+            <img src="//unsplash.it/500/501" alt="Gallery image 5" />
           </div>
 
           <div class="gallery__content">
@@ -324,7 +329,7 @@
         <!-- Gallery item 6 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/502" alt="Gallery image 6" />
+            <img src="//unsplash.it/501/502" alt="Gallery image 6" />
           </div>
 
           <div class="gallery__content">
@@ -336,7 +341,7 @@
         <!-- Gallery item 7 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/502/502" alt="Gallery image 7" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 7" />
           </div>
 
           <div class="gallery__content">
@@ -348,7 +353,7 @@
         <!-- Gallery item 8 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/503/500" alt="Gallery image 8" />
+            <img src="//unsplash.it/500/501" alt="Gallery image 8" />
           </div>
 
           <div class="gallery__content">
@@ -360,7 +365,7 @@
         <!-- Gallery item 9 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/503" alt="Gallery image 9" />
+            <img src="//unsplash.it/500/502" alt="Gallery image 9" />
           </div>
 
           <div class="gallery__content">
@@ -372,7 +377,7 @@
         <!-- Gallery item 10 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/499" alt="Gallery image 10" />
+            <img src="//unsplash.it/501/502" alt="Gallery image 10" />
           </div>
 
           <div class="gallery__content">
@@ -384,7 +389,7 @@
         <!-- Gallery item 11 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/498/503" alt="Gallery image 11" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 11" />
           </div>
 
           <div class="gallery__content">
@@ -396,7 +401,7 @@
         <!-- Gallery item 12 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/499/502" alt="Gallery image 12" />
+            <img src="//unsplash.it/501/502" alt="Gallery image 12" />
           </div>
 
           <div class="gallery__content">
