--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body id="top">
     <!-- Loader -->
     <div id="loader" class="loader">
-      <img src="images/logo/logo.svg" alt="Loader">
+      <img src="images/logo/logo.svg" alt="Loader" />
     </div>
 
     <!-- Navbar -->
@@ -293,7 +293,7 @@
         <!-- Gallery item 3 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/501" alt="Gallery image 3" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 3" />
           </div>
 
           <div class="gallery__content">
@@ -305,7 +305,7 @@
         <!-- Gallery item 4 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/500" alt="Gallery image 4" />
+            <img src="//unsplash.it/501/500" alt="Gallery image 4" />
           </div>
 
           <div class="gallery__content">
@@ -317,7 +317,7 @@
         <!-- Gallery item 5 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/501" alt="Gallery image 5" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 5" />
           </div>
 
           <div class="gallery__content">
@@ -329,7 +329,7 @@
         <!-- Gallery item 6 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/501/502" alt="Gallery image 6" />
+            <img src="//unsplash.it/501/500" alt="Gallery image 6" />
           </div>
 
           <div class="gallery__content">
@@ -353,7 +353,7 @@
         <!-- Gallery item 8 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/501" alt="Gallery image 8" />
+            <img src="//unsplash.it/501/500" alt="Gallery image 8" />
           </div>
 
           <div class="gallery__content">
@@ -365,7 +365,7 @@
         <!-- Gallery item 9 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/500/502" alt="Gallery image 9" />
+            <img src="//unsplash.it/500/500" alt="Gallery image 9" />
           </div>
 
           <div class="gallery__content">
@@ -377,7 +377,7 @@
         <!-- Gallery item 10 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/501/502" alt="Gallery image 10" />
+            <img src="//unsplash.it/501/500" alt="Gallery image 10" />
           </div>
 
           <div class="gallery__content">
@@ -401,7 +401,7 @@
         <!-- Gallery item 12 -->
         <div class="gallery__item">
           <div class="gallery__image">
-            <img src="//unsplash.it/501/502" alt="Gallery image 12" />
+            <img src="//unsplash.it/501/500" alt="Gallery image 12" />
           </div>
 
           <div class="gallery__content">
